<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetails"
    tools:layout_editor_absoluteY="81dp">
    <!--background-->
    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back1" />

        <ImageView
            android:id="@+id/image_red"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:alpha="0.5"
            android:src="@drawable/back" />
        <!--background end-->

        <TextView
            android:id="@+id/textlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gitchgitch"
            android:text="@string/sell"
            android:textColor="@color/colorWhite"
            android:textSize="30dp" />
        <!--photo-->

        <ImageView
            android:id="@+id/iv_itemPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/textlogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/image_face"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lncamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_below="@id/iv_itemPhoto"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/but_itemcamera"
                android:layout_width="100dp"
                android:layout_height="wrap_content"


                android:background="@drawable/buttonw1"
                android:text="@string/take_photo"
                android:textAllCaps="false"
                android:textColor="@color/colorRose"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/but_itemgallery"
                android:layout_width="100dp"
                android:layout_height="wrap_content"

                android:background="@drawable/buttonw1"
                android:text="@string/from_gallery"
                android:textAllCaps="false"
                android:textColor="@color/colorRose"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--photo end-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="100dp">
            <!--itemForSale name-->
            <LinearLayout
                android:id="@+id/lnusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/image_itemname" />


                <EditText
                    android:id="@+id/etItemname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/itemn"

                    android:inputType="textPersonName"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="14sp" />

            </LinearLayout>
            <!--delivery-->
            <LinearLayout
                android:id="@+id/lnname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_below="@id/lnusername"
                android:layout_marginTop="20dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/image_shiping" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deliveryway"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    android:layout_marginLeft="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cheIsDelivery"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cheIspickup"/>


            </LinearLayout>
            <!--paymet way-->

            <LinearLayout
                android:id="@+id/lnlastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnname"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/image_itempay" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paymenway"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paypal"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cheIsPaypal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cheIsCash"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bit"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cheIsBit"/>





            </LinearLayout>
            <!--price-->
            <LinearLayout
                android:id="@+id/ln"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnlastname"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/image_itemprise" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prise"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"/>
                <EditText
                    android:id="@+id/ETprise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/priseUsd"

                    android:inputType="number"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="14sp" />



            </LinearLayout>
            <LinearLayout
                android:id="@+id/lnRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ln"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/image_itemrate" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:fontFamily="@font/gitchgitch"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"/>
                <RatingBar
                    android:id="@+id/RBitem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyle"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:clickable="true"/>
            </LinearLayout>
            <Button
                android:id="@+id/butitemDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnRate"

                android:layout_marginTop="10dp"
                android:background="@drawable/buttonw1"
                android:text="@string/complete"
                android:textAllCaps="false"
                android:textColor="@color/colorRose"
                android:textSize="12dp" />



        </RelativeLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>